syntax = "proto3";
package qotd;
option go_package = "github.com/lyteabovenyte/exploring_go/grpc/proto/qotd";

message GetReq {
	string author = 1;
}

message getResp {
	string author = 1;
	string quote = 2;
}

service QOTD {
	rpc GetQOTD(GetReq) returns (getResp) {};
}